
- Fixed using setSelectedValue in CategorySelector if there is no selected category (issue #479)

- Added option that a theme can avoid the loading of core.css, e.g. Mobile themes (issue #453)

- Fixed typo causing interactive installers not being recognised (issue #448)

- Fixed blocks migration from Zikula 1.2 to Zikula 1.3 (issue #406)


CHANGELOG - ZIKULA 1.3.3
------------------------

- Change order in auto generated cache_id for theme caching to: module / type / function / customargs|homepage/startpageargs / uid_X|guest.

- In Admin -> Themes -> Settings: added possibility to delete theme cache for specific module or homepage.

- In Admin -> Themes -> Settings -> 'Length of time to keep cached theme pages' current value is for home page, added other value for modules.

- Addition of jQuery-UI

- update jQuery to latest stable version

- Conversion of Admin and Blocks modules to Doctrine 2


CHANGELOG - ZIKULA 1.3.1
------------------------

- Fixed issue with FileUtil::getFiles() not respecting nestedData arg (issue #3139).

- Updated DoctrineExtensions.

- Added Imagine image manipulation library - https://github.com/avalanche123/Imagine

- Added standard-fields, attributable, category and metadata extensions for Doctrine 2.

- Fixed DoctineUtil::renameColumn() - was corrupting TEXT to VARCHAR(255) and TINYINT(1) for TINYINT(4) when renaming.

- Added support for DateTime objects to DateUtil.

- Fixed XSS issues in Theme module.

- Clean up remaining table prefix reference closes #77.

- Increased hook name field lengths from 60 to 100 characters.

- Upgraded jQuery to 1.6.3.

- Fixed issue with DoctrineExtensions plugin and short URLs - issue #91.

- Adjusted installer to handle multilingual custom SQL files.

- Upgraded PHPIDS to 0.7.0.

- Fixed issue where restoring defauls for a module, the localization wasn't used (issue #71)

- Fixed issue where pager wasn't able to parse array with three dimensions (issue #111)


CHANGELOG - ZIKULA 1.3.0