@@ -63,6 +63,8 @@ CHANGELOG - ZIKULA 1.3.4
 
 - Fixed blocks migration from Zikula 1.2 to Zikula 1.3 (issue #406)
 
+- Fixed formfloatinput plugin localisation (issue #462)
+
 
 CHANGELOG - ZIKULA 1.3.3
 ------------------------
